<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#16222B">

    <TextView
        android:id="@+id/PasswordGenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Secure Generator"
        android:textColor="#3F7FB6"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/messageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Select your password requirements"
        android:textColor="#697B8C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordGenText" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordGenText"
        app:layout_constraintVertical_bias="0.19999999">

        <LinearLayout
            android:id="@+id/azHorizontalLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/azText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="a-z"
                android:textColor="@color/text_blue"
                android:textSize="24sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/azSwitch"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                app:thumbTint="@color/text_blue"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/AZHorizontalLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/AZText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="A-Z"
                android:textColor="@color/text_blue"
                android:textSize="24sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/AZSwitch"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                app:thumbTint="@color/text_blue"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/NumbersHorizontalLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/digitsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="0-9"
                android:textColor="@color/text_blue"
                android:textSize="24sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/digitsSwitch"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                app:thumbTint="@color/text_blue"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/SpecialCharsHorizontalLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/SpecialCharsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="!@#$%^*"
                android:textColor="@color/text_blue"
                android:textSize="24sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/specialCharsSwitch"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                app:thumbTint="@color/text_blue"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/PasswordLengthVertLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/passwordLengthText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Password Length: "
                    android:textAlignment="textStart"
                    android:textColor="@color/text_blue"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/pwdLength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:text="6"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_blue"
                    android:textSize="16sp" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBar"
                style="@style/MySeekBar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:indeterminate="false"
                android:max="32"
                android:min="6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/minLength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:text="6"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/maxLength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:text="32"
                    android:textAlignment="textEnd"
                    android:textColor="@color/text_blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nameHorizontalLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/generateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.7">

        <EditText
            android:id="@+id/generatedPassword"
            android:layout_width="315dp"
            android:layout_height="80dp"
            android:backgroundTint="#697B8C"
            android:ems="6"
            android:fontFamily="@font/poppins_semibold"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/text_blue"
            android:textSize="14sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/copyButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/ic_copy_24"
            android:backgroundTint="@color/text_blue"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/generateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/text_blue"
        android:fontFamily="@font/poppins_semibold"
        android:paddingVertical="18dp"
        android:text="Generate"
        android:textColor="#032947"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/navbar"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_nav" />

</androidx.constraintlayout.widget.ConstraintLayout>