<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title=""
        android:icon="@drawable/ic_lock"/>

    <item
        android:id="@+id/password_gen"
        android:title=""
        android:icon="@drawable/ic_password_24"/>

    <item
        android:id="@+id/settings"
        android:title=""
        android:icon="@drawable/ic_settings"/>
</menu>